--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "popper.js": "^1.14.4",
     "postcss-loader": "^2.1.6",
     "react": "^16.4.2",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
