--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.4.2",
     "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
+    "react-moment": "^0.7.9",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack-cli": "^3.1.0",
